src/hotspot/share/gc/shared/space.cpp
@@ -621,6 +621,7 @@ void ContiguousSpace::allocate_temporary_filler(int factor) {
       obj->set_mark(vmClasses::Object_klass()->prototype_header());
     } else {
       obj->set_mark(markWord::prototype());
+      obj->set_klass_gap(0);
       obj->set_klass(vmClasses::Object_klass());
     }
   }
